k8s/manifests/gateway.yaml
---
# Gatway is our entrypoint from the outside world
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ingress
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-poc-wheat-dn42-net
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All

---
# HTTPRoute maps and ingress to a backend Service
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poc-nats-agent-https
  namespace: default
spec:
  hostnames:
    - "nats-agent.poc.wheat-dn42.net"
  parentRefs:
    - name: ingress
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: poc-nats-agent
          port: 8080
